.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:51:38 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
make: Nothing to be done for 'all'.
21:55:19 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
make: Nothing to be done for 'all'.
21:59:29 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:47:2: error: 'PORTD_PDDR' undeclared (first use in this function)
  PORTD_PDDR = (1 << 4);
  ^
../Sources/main.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:61:3: error: 'GPI0A_PDOR' undeclared (first use in this function)
   GPI0A_PDOR = 0;
   ^
../Sources/main.c: At top level:
../Sources/main.c:71:5: error: expected identifier or '(' before 'return'
     return 0;
     ^
../Sources/main.c:72:1: error: expected identifier or '(' before '}' token
 }
 ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
21:59:45 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:47:2: error: 'PORTD_PDDR' undeclared (first use in this function)
  PORTD_PDDR = (1 << 4);
  ^
../Sources/main.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:61:3: error: 'GPI0A_PDOR' undeclared (first use in this function)
   GPI0A_PDOR = 0;
   ^
../Sources/main.c: At top level:
../Sources/main.c:71:5: error: expected identifier or '(' before 'return'
     return 0;
     ^
../Sources/main.c:72:1: error: expected identifier or '(' before '}' token
 }
 ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
21:59:49 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:47:2: error: 'PORTD_PDDR' undeclared (first use in this function)
  PORTD_PDDR = (1 << 4);
  ^
../Sources/main.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:61:3: error: 'GPI0A_PDOR' undeclared (first use in this function)
   GPI0A_PDOR = 0;
   ^
../Sources/main.c: At top level:
../Sources/main.c:71:5: error: expected identifier or '(' before 'return'
     return 0;
     ^
../Sources/main.c:72:1: error: expected identifier or '(' before '}' token
 }
 ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
22:02:13 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:47:2: error: 'PORTD_PDDR' undeclared (first use in this function)
  PORTD_PDDR = (1 << 4);
  ^
../Sources/main.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:61:3: error: 'GPI0A_PDOR' undeclared (first use in this function)
   GPI0A_PDOR = 0;
   ^
../Sources/main.c: At top level:
../Sources/main.c:71:5: error: expected identifier or '(' before 'return'
     return 0;
     ^
../Sources/main.c:72:1: error: expected identifier or '(' before '}' token
 }
 ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
22:05:05 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
Finished building: ../Sources/main.c
 
Building file: ../Project_Settings/Startup_Code/system_MK20D5.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Project_Settings/Startup_Code/system_MK20D5.d" -MT"Project_Settings/Startup_Code/system_MK20D5.o" -c -o "Project_Settings/Startup_Code/system_MK20D5.o" "../Project_Settings/Startup_Code/system_MK20D5.c"
Finished building: ../Project_Settings/Startup_Code/system_MK20D5.c
 
Building target: Lab1.elf
Invoking: Cross ARM C++ Linker
arm-none-eabi-g++ -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -T "MK20DX128xxx5_flash.ld" -Xlinker --gc-sections -L"C:/Users/Sienna/Documents/NewWorkSpace/Sienna-Rose-Price-Labs/Lab1/Project_Settings/Linker_Files" -Wl,-Map,"Lab1.map" -specs=nano.specs -specs=nosys.specs -o "Lab1.elf"  ./Sources/main.o  ./Project_Settings/Startup_Code/startup_MK20D5.o ./Project_Settings/Startup_Code/system_MK20D5.o   
Finished building target: Lab1.elf
 
